# auto_classification_generator

./: .gitignore  README.md  __init__.py  __main__.py  auto_classification.py  classification_generator.py  common.py  pyproject.toml  pyvenv.cfg
.github/workflows/: pypi-publish.yml  python-publish.yml
assets/: sample_from_dict.json
auto_classification_generator/: __init__.py  classification_generator.py  cli.py  common.py  hash.py  options.properties  test_cli.py
auto_classification_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
auto_reference_generator/: __init__.py  cli.py  hash.py  reference_generator.py
auto_reference_generator/options/: options.properties
