[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_reference_generator"
version = "1.0.0"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "Auto Reference Generator Tool for Archivists"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies=["pandas","openpyxl"]
[project.urls]
Homepage = "https://github.com/CPJPRINCE/auto_reference_generator"
Issues = "https://github.com/CPJPRINCE/auto_reference_generator/issues"
[project.scripts]
auto_ref = "auto_reference_generator.cli:run_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['auto_reference_generator']
exclude = []